[package]
name = "rsgrep"
version = "1.1.3"
edition = "2024"
description = "rsgrep is a high-performance, user-friendly search tool for recursively scanning files."
license = "UNILICENSE"
repository = "https://github.com/itismeherb/rsgrep"
homepage = "https://github.com/itismeherb/rsgrep"
documentation = "https://github.com/itismeherb/rsgrep"

[package.metadata.release]
sign-commit = false
push = true
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
allow-branch = ["master"]

[dependencies]
colored = "2"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
atty = "0.2"
rayon = "1.10"
