[package]
name = "rsgrep"
version = "1.7.3"
edition = "2024"
description = "rsgrep is a high-performance, user-friendly search tool for recursively scanning files."
license = "UNILICENSE"
repository = "https://github.com/itismeherb/rsgrep"
homepage = "https://github.com/itismeherb/rsgrep"
documentation = "https://github.com/itismeherb/rsgrep"

[package.metadata.release]
sign-commit = false
push = true
tag-name = "v{{version}}"
tag-message = "Release {{version}}"
allow-branch = ["master"]
publish = false

[dependencies]
colored = "2"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
atty = "0.2"
rayon = "1.10"
ignore = "0.4.25"
